<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Кондрашов Дмитрий Эдуардович
  ~ Copyright (C) 2018. All rights reserved.
  ~ email: kondrashovde@gmail.com
  ~
  ~ Last modified 1/26/18 5:59 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search"
          app:showAsAction="always|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/cd_selection_toggle"
          android:title="@string/selection_toggle"
          app:showAsAction="never"/>

    <item android:id="@+id/cd_settings"
          android:title="@string/main_preference"
          android:icon="@drawable/ic_settings_white"
          app:showAsAction="never"/>
    <item android:id="@+id/cd_reset_filter"
          android:title="@string/reset_filter_title"
          android:icon="@drawable/ic_cancel_black"
          app:showAsAction="never"/>
    <item android:id="@+id/cd_start_test"
          android:title="@string/testing"
          app:showAsAction="never"/>
    <item android:id="@+id/cd_scroll_to"
          android:title="@string/scroll_to"
          app:showAsAction="never"/>
</menu>