<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/main_dictionaries_item_nd"
            android:icon="@drawable/ic_school"
            android:title="@string/main_dictionary"
       />

        <item
            android:id="@+id/custom_dictionary_item_nd"
            android:icon="@drawable/ic_school"
            android:title="@string/custom_dictionaries"
        />

        <item
            android:id="@+id/shared_dictionaries_item_nd"
            android:icon="@drawable/ic_school"
            android:title="@string/shared_dictionaries"
        />

        <item
            android:id="@+id/society_item_nd"
            android:icon="@drawable/ic_group_black"
            android:title="@string/society"
        />

    </group>

</menu>