<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mode_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mode_favorite"
        android:icon="@drawable/ic_favorite_black"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mode_learned_status"
        android:enabled="true"
        android:icon="@drawable/ic_school_white"
        android:title="@string/learned"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mode_copy"
        android:enabled="true"
        android:icon="@drawable/ic_content_copy"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />
</menu>