<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fallenangel.linmea.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/test_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <Button
        android:id="@+id/test_singup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singup"/>

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"/>

    <Button
        android:id="@+id/update_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"/>
</LinearLayout>

</android.support.constraint.ConstraintLayout>
