<!--
  ~ Created by Кондрашов Дмитрий Эдуардович
  ~ Copyright (C) 2018. All rights reserved.
  ~ email: kondrashovde@gmail.com
  ~
  ~ Last modified 1/26/18 5:59 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/popup_menu_delete"
            android:title="@string/delete" />
        <item
            android:id="@+id/popup_menu_edit"
            android:title="@string/edit_description_title"/>
        <!--<item-->
            <!--android:id="@+id/popup_menu_share"-->
            <!--android:title="@string/share" />-->
        <!--<item-->
            <!--android:id="@+id/popup_menu_default_dict"-->
            <!--android:title="@string/set_default_dictionary" />-->
        <item
            android:id="@+id/popup_menu_testing"
            android:title="@string/testing" />
</menu>