<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content" android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/avatar"
            android:layout_margin="7dp"/>
        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname_profile"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_above="@+id/email"
            android:layout_toRightOf="@+id/avatar"
            android:layout_toEndOf="@+id/avatar"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="14sp"
            android:textColor="@color/lightGray"
            android:layout_alignBottom="@+id/avatar"
            android:layout_toRightOf="@+id/avatar"/>
        <TextView
            android:id="@+id/accept_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/cancel_action"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:textColor="@color/accept_request"
            android:shadowColor="@color/colorBlack"
            android:text="@string/accept"/>
        <TextView
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:textColor="@color/cancel_request"
            android:shadowColor="@color/colorBlack"
            android:text="@string/cancel"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>