<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="160dp"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <LinearLayout
                    android:id="@+id/liner_layout_header"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    >

                        <ImageView
                            android:id="@+id/nv_header_image_view"
                            android:src="@drawable/avatar_170"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                    <TextView
                        android:id="@+id/sign_up_header_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"
                        android:paddingTop="4dp"

                        android:text="@string/singup"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                        android:textSize="@dimen/header_text_size"/>

                </LinearLayout>

    <TextView
        android:id="@+id/email_header_text_view"
        android:text="@string/email_hint"
        android:textSize="12sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:paddingTop="4dp"
        android:layout_below="@+id/liner_layout_header"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


    <TextView
            android:id="@+id/or_header_text_view"
            android:text="@string/or"
            android:textSize="@dimen/header_text_size"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="4dp"
            android:paddingLeft="18dp"

            android:layout_toRightOf="@+id/liner_layout_header"
            android:layout_alignBottom="@+id/liner_layout_header"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/sign_in_text_view_header"
            android:text="@string/app_name"
            android:textSize="@dimen/header_text_size"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="4dp"
            android:paddingLeft="18dp"

            android:layout_toRightOf="@+id/or_header_text_view"
            android:layout_alignBottom="@+id/or_header_text_view"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>




    <ImageView
        android:id="@+id/log_out_header_image_view"
        android:src="@drawable/ic_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>







</RelativeLayout>

